# poetry-audit-plugin

./: .flake8  .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
poetry_audit_plugin/: __init__.py  command.py  constants.py  errors.py  plugin.py  safety.py
scripts/: format.sh  lint.sh  publish.sh  test.sh
tests/: test_main.py
tests/assets/no_vulnerabilities/: pyproject.toml
tests/assets/vulnerabilities_in_dev/: pyproject.toml
tests/assets/vulnerabilities_in_main/: pyproject.toml
tests/assets/vulnerabilities_in_main_dev/: pyproject.toml
