[tool.poetry]
name = "poetry-audit-plugin"
version = "0.1.1"
description = "Poetry plugin for checking security vulnerabilities in dependencies"
authors = ["opeco17 <opeco17@gmail.com>"]
readme = "README.md"
repository = "https://github.com/opeco17/poetry-audit-plugin"
packages = [{include = "poetry_audit_plugin"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License"
]
keywords = ["poetry", "vulnerabilities", "security", "audit"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.0b1"
safety = ">1.0.0, <=1.10.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy  = "^0.942"
flake8 = "^4.0.0"
black = "^22.3.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.poetry.plugins."poetry.application.plugin"]
poetry-audit-plugin = "poetry_audit_plugin.plugin:AuditApplicationPlugin"
