[tool.poetry]
name = "poetry-audit-plugin"
version = "0.3.0"
description = "Poetry plugin for checking security vulnerabilities in dependencies"
authors = ["opeco17 <opeco17@gmail.com>"]
readme = "README.md"
repository = "https://github.com/opeco17/poetry-audit-plugin"
packages = [{include = "poetry_audit_plugin"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]
keywords = ["poetry", "vulnerabilities", "security", "audit"]

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.7.1"
safety = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy  = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.poetry.plugins."poetry.application.plugin"]
poetry-audit-plugin = "poetry_audit_plugin.plugin:AuditApplicationPlugin"
