[tool.poetry]
name = "poetry-audit-demo"
version = "0.1.0"
description = ""
authors = ["opeco17 <opeco17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opeco17-dummy-package = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
